Funçoes da entrega

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+    <h1>Lig4</h1>
+    <p>Instruções:</p>
+    </header>
+    <div id="start"></div>
+    <!-- colocar hidden no board depois -->
+    <div id="board"></div>
+    <div id="victory" class="hidden"></div>
     
+    <script src="script.js"></script>
 </body>
 </html>
