Ids das columns e red ball de exemplo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <section id="area">
             <button id="start" type="submit">start</button>
-            
+            <div class="ballRed"></div>
             <!-- colocar hidden no board depois -->
             <div id="board"></div>
 
