--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <h1>Lig4 05_S5</h1>
         <img src="logo.jpg">
     </header>
-
+        
     <main>
         <section id="instruct">
-            <h2>Lig4</h2>
+            <h2>Lig4 CATS</h2>
             <p>
                 No Lig-4, um jogador assume o gatinho branco e o outro assume o gatinho rajado.
                 Os jogadores se alternam inserindo seus gatinhos em uma das 7 colunas de uma tabela 7x6.
                 O primeiro jogador que conseguir quatro de seus gatinhos em uma linha (seja horizontal,
                 vertical ou diagonal) vence.
             </p>
-            <h3>Instruções:</h3>
+            <h3>Regras :</h3>
             <ul>
                 <li>Player 1 inicia o jogo.</li>
                 <li>Escolha seu gatinho.</li>
