esqueleto mensagem de empate, mensagem de vitoria, borda dos gatinhos e zoom na imagem deles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="logo.jpg">
     </header>
         
-    <main>
+    <main id = "teste">
         <section id="instruct">
             <h2>Lig4 CATS</h2>
             <p>
@@ -59,12 +59,17 @@
             </div>
             <!-- colocar hidden no board depois -->
             <div id="board"></div>
-
-            <div id="victory" class="hidden"></div>
             <div id="even" class="hidden"></div>
         </section>
     </main>
-
+    <div id="victory" class="hidden">
+        <p>Teste laslasla</p>
+        <input id="btnreset" type="button" value="reset">
+    </div>
+    <div id="drawn" class="hidden">
+        <p>Teste laslasla</p>
+        <input id="btnreset" type="button" value="reset">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
