--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button id="start" class=" hidden" type="submit">start</button>
             <div id="jogadores">
                 <div id="player1">
-                    <div id="gatinho1"> 
+                    <div id="gatinho1" class="borderGatinho1"> 
                     </div>
                     <p id="jogador1">
                         Player 1
@@ -62,13 +62,21 @@
             <div id="even" class="hidden"></div>
         </section>
     </main>
-    <div id="victory" class="hidden">
-        <p>Teste laslasla</p>
-        <input id="btnreset" type="button" value="reset">
+    <div id="victory1" class="hidden">
+        <p>Player 1 ganhou!! <br> Jogar novamente?</p>
+        <img src="img/vitoria.png" alt="vitoria">
+        <input id="btnreset1" type="button" value="reset">
     </div>
+
+    <div id="victory2" class="hidden">
+        <p>Player 2 ganhou!! <br> Jogar novamente?</p>
+        <img src="img/vitoria2.png" alt="vitoria2">
+        <input id="btnreset2" type="button" value="reset">
+    </div>
+
     <div id="drawn" class="hidden">
         <p>Teste laslasla</p>
-        <input id="btnreset" type="button" value="reset">
+        <input id="btnreset" class="btnreset" type="button" value="reset">
     </div>
     <script src="script.js"></script>
 </body>
