Arrumando autoplay cachorres

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Lig4 05_S5</h1>
         <img src="logo.jpg">
     </header>
-        <audio id="cachorres" src="musica_de_batalha_do_naruto_em_cachorres.mp3" loop="true" ></audio>
+        <audio id="cachorres" src="musica_de_batalha_do_naruto_em_cachorres.mp3" loop="true" autoplay></audio>
     <main id = "teste">
         <section id="instruct">
             <h2>Lig4 CATS</h2>
