--- a/index.html
+++ b/index.html
@@ -77,12 +77,8 @@
 
     <div id = "drawn" class="drawn hidden" >
         <audio id="audiocat3" src="miado3.wav"></audio>
-        <div class="catdrawn">
-            <h2 id="empate">Meow! Voces empataram!</h2>
-        <p id="textempate">Que tal continuarem no x1?</p>
-        </div>
-        
-        <div id="bongcat"></div>
+        <p id="textempate">Meow... Empatou!<br>jogar novamente?</p>
+        <img src="img/empate.png" alt="bongocat">
         <input id="btnreset" class="btn" type="button" value="Resetar">
     </div>
     <script src="script.js"></script>
